<resources>
    <string name="app_textView">Collab
        With
        Me</string>
    <string name="login_button">Log in</string>
    <string name="slogan_textView">Share ideas and collaborate with each other</string>
    <string name="registration_link_textView">Don\'t have an account? Sign up here</string>
    <string name="registration_textView">New Account</string>
    <string name="name_input_hint">Name</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="registration_button">Register</string>
</resources>
