<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

    <TextView
            android:text="@string/registration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrationLinkTextView" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:textSize="36sp" android:fontFamily="@font/alfa_slab_one"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            android:layout_marginBottom="96dp" app:layout_constraintBottom_toTopOf="@+id/nameInput"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameInput"
            android:hint="@string/name_input_hint" android:layout_marginTop="192dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationLinkTextView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" android:autofillHints="" app:layout_constraintHorizontal_bias="0.416"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="@+id/emailInput" app:layout_constraintStart_toStartOf="@+id/emailInput"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/password_input_hint"
            android:textSize="24sp" android:autofillHints=""
            android:layout_marginBottom="33dp" app:layout_constraintBottom_toTopOf="@+id/registrationBtn"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailInput"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="@+id/nameInput" app:layout_constraintEnd_toEndOf="@+id/nameInput"
            android:hint="@string/email_input_hint" app:layout_constraintHorizontal_bias="0.0" android:textSize="24sp"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/password_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/passwordInput" android:contentDescription="TODO"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toTopOf="@+id/registrationBtn"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/username_icon"
            android:id="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="336dp"
            app:layout_constraintEnd_toStartOf="@+id/nameInput" android:layout_marginEnd="6dp"/>
    <ImageView
            android:layout_width="32dp"
            android:layout_height="36dp" app:srcCompat="@drawable/email_icon"
            android:id="@+id/imageView9"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/emailInput"
            android:layout_marginEnd="4dp"/>
    <Button
            android:text="@string/registration_button"
            android:layout_width="379dp"
            android:layout_height="69dp"
            android:id="@+id/registrationBtn"
            style="@android:style/Widget.Button" android:textSize="18sp" android:background="@drawable/style1"
            android:fontFamily="@font/alfa_slab_one"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            tools:layout_editor_absoluteY="144dp" android:id="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>